// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Popconfirm/demo/basic.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Delete
    </span>
  </button>
</div>
`;

exports[`renders Popconfirm/demo/icon.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Popconfirm/demo/loading.md correctly 1`] = `
<button
  class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
  style="margin-right:20px"
  type="button"
>
  <span>
    Async close
  </span>
</button>
`;

exports[`renders Popconfirm/demo/position.md correctly 1`] = `
<div
  style="position:relative;width:400px;height:300px"
>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:20px;left:70px"
    type="button"
  >
    <span>
      TL
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:20px;left:180px"
    type="button"
  >
    <span>
      Top
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:20px;left:290px"
    type="button"
  >
    <span>
      TR
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:60px;left:10px"
    type="button"
  >
    <span>
      LT
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:120px;left:10px"
    type="button"
  >
    <span>
      Left
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:180px;left:10px"
    type="button"
  >
    <span>
      LB
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:60px;left:350px"
    type="button"
  >
    <span>
      RT
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:120px;left:350px"
    type="button"
  >
    <span>
      Right
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:180px;left:350px"
    type="button"
  >
    <span>
      RB
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:226px;left:70px"
    type="button"
  >
    <span>
      BL
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:226px;left:180px"
    type="button"
  >
    <span>
      Bottom
    </span>
  </button>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    style="position:absolute;width:80px;top:226px;left:290px"
    type="button"
  >
    <span>
      BR
    </span>
  </button>
</div>
`;

exports[`renders Popconfirm/demo/text.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Discard
    </span>
  </button>
</div>
`;
